--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko + 50 km okruh</title>
+  <title>Radar zrážok – Slovensko + 50 km okruh (Canvas presné)</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -129,7 +129,7 @@
     keepBuffer: 0
   }).addTo(map);
 
-  // ✅ ŠTVOREC (sivý)
+  // ✅ Sivý štvorec
   L.rectangle(MAP_BOUNDS, {
     color: "#888888",
     weight: 2,
@@ -164,6 +164,41 @@
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
+  // ✅ Canvas maska – presne na štvorec
+  function createMaskedLayer(frame) {
+    return L.tileLayer.canvas({
+      async: true,
+      noWrap: true,
+      async drawTile: function(canvas, tilePoint, zoom) {
+        const ctx = canvas.getContext('2d');
+        const img = new Image();
+        img.crossOrigin = '';
+        img.src = `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/${zoom}/${tilePoint.x}/${tilePoint.y}/4/1_1.png`;
+
+        img.onload = () => {
+          ctx.clearRect(0, 0, 256, 256);
+          ctx.drawImage(img, 0, 0);
+
+          // ✅ Vymaže všetko mimo definovaného štvorca
+          const tileBounds = map.getBounds();
+          const boundsSW = map.latLngToContainerPoint(MAP_BOUNDS[0]);
+          const boundsNE = map.latLngToContainerPoint(MAP_BOUNDS[1]);
+
+          ctx.globalCompositeOperation = 'destination-in';
+          ctx.beginPath();
+          ctx.rect(
+            Math.max(0, boundsSW.x - tilePoint.x * 256),
+            Math.max(0, boundsNE.y - tilePoint.y * 256),
+            Math.min(256, boundsNE.x - boundsSW.x),
+            Math.min(256, boundsSW.y - boundsNE.y)
+          );
+          ctx.fill();
+          ctx.globalCompositeOperation = 'source-over';
+        };
+      }
+    });
+  }
+
   function loadRadar() {
     radarLayers.forEach(layer => map.removeLayer(layer));
     radarLayers = [];
@@ -175,15 +210,8 @@
         currentIndex = data.radar.past.length - 1;
 
         radarFrames.forEach((frame, i) => {
-          const layer = L.tileLayer(
-            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
-            {
-              opacity: 0,
-              noWrap: true,
-              bounds: MAP_BOUNDS,
-              keepBuffer: 0
-            }
-          ).addTo(map);
+          const layer = createMaskedLayer(frame).addTo(map);
+          layer.setOpacity(0);
           radarLayers[i] = layer;
         });
 
