--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko + 50 km okruh (Canvas presné)</title>
+  <title>Radar zrážok – Slovensko</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -103,7 +103,7 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  // ✅ Slovensko + 50 km na všetky strany
+  // ✅ Slovensko + 50 km okruh
   const MAP_BOUNDS = [
     [46.7, 15.5],  // juhozápad
     [50.0, 23.0]   // severovýchod
@@ -120,20 +120,13 @@
     keepBuffer: 0
   }).fitBounds(MAP_BOUNDS);
 
-  // ✅ Podkladová mapa
+  // ✅ Podkladová mapa (Carto Dark)
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 11,
     minZoom: 7,
     noWrap: true,
     keepBuffer: 0
-  }).addTo(map);
-
-  // ✅ Sivý štvorec
-  L.rectangle(MAP_BOUNDS, {
-    color: "#888888",
-    weight: 2,
-    fillOpacity: 0
   }).addTo(map);
 
   // ✅ Hranice Slovenska
@@ -164,41 +157,6 @@
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
-  // ✅ Canvas maska – presne na štvorec
-  function createMaskedLayer(frame) {
-    return L.tileLayer.canvas({
-      async: true,
-      noWrap: true,
-      async drawTile: function(canvas, tilePoint, zoom) {
-        const ctx = canvas.getContext('2d');
-        const img = new Image();
-        img.crossOrigin = '';
-        img.src = `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/${zoom}/${tilePoint.x}/${tilePoint.y}/4/1_1.png`;
-
-        img.onload = () => {
-          ctx.clearRect(0, 0, 256, 256);
-          ctx.drawImage(img, 0, 0);
-
-          // ✅ Vymaže všetko mimo definovaného štvorca
-          const tileBounds = map.getBounds();
-          const boundsSW = map.latLngToContainerPoint(MAP_BOUNDS[0]);
-          const boundsNE = map.latLngToContainerPoint(MAP_BOUNDS[1]);
-
-          ctx.globalCompositeOperation = 'destination-in';
-          ctx.beginPath();
-          ctx.rect(
-            Math.max(0, boundsSW.x - tilePoint.x * 256),
-            Math.max(0, boundsNE.y - tilePoint.y * 256),
-            Math.min(256, boundsNE.x - boundsSW.x),
-            Math.min(256, boundsSW.y - boundsNE.y)
-          );
-          ctx.fill();
-          ctx.globalCompositeOperation = 'source-over';
-        };
-      }
-    });
-  }
-
   function loadRadar() {
     radarLayers.forEach(layer => map.removeLayer(layer));
     radarLayers = [];
@@ -210,8 +168,15 @@
         currentIndex = data.radar.past.length - 1;
 
         radarFrames.forEach((frame, i) => {
-          const layer = createMaskedLayer(frame).addTo(map);
-          layer.setOpacity(0);
+          const layer = L.tileLayer(
+            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
+            {
+              opacity: 0,
+              noWrap: true,
+              bounds: MAP_BOUNDS,
+              keepBuffer: 0
+            }
+          ).addTo(map);
           radarLayers[i] = layer;
         });
 
