--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko</title>
+  <title>Radar zrážok – Slovensko + 30 km (Plynulá verzia)</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -83,6 +83,10 @@
     #attribution a:hover {
       text-decoration: underline;
     }
+    /* ✅ GPU akcelerácia pre plynulosť */
+    .leaflet-tile, .leaflet-overlay-pane {
+      will-change: transform;
+    }
   </style>
 </head>
 <body>
@@ -103,10 +107,10 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  // ✅ Slovensko + 50 km okruh
+  // ✅ Slovensko + 30 km okruh
   const MAP_BOUNDS = [
-    [46.7, 15.5],  // juhozápad
-    [50.0, 23.0]   // severovýchod
+    [47.1, 16.0],  // juhozápad
+    [49.6, 22.7]   // severovýchod
   ];
 
   const map = L.map('map', {
@@ -117,7 +121,11 @@
     noWrap: true,
     minZoom: 7,
     maxZoom: 11,
-    keepBuffer: 0
+    keepBuffer: 0,
+    preferCanvas: true,        // ✅ používa Canvas pre plynulosť
+    zoomAnimation: true,        // ✅ plynulý zoom
+    fadeAnimation: true,        // ✅ plynulé prechody dlaždíc
+    markerZoomAnimation: true   // ✅ plynulé priblíženie
   }).fitBounds(MAP_BOUNDS);
 
   // ✅ Podkladová mapa (Carto Dark)
