--- a/index.html
+++ b/index.html
@@ -2,96 +2,41 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko (Plynulý a bez orezov)</title>
+  <title>Radar zrážok – Slovensko</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    html, body, #map {
-      height: 100%;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      background: #000;
-    }
-    .leaflet-control-attribution {
-      display: none;
-    }
+    html, body, #map {height:100%;width:100%;margin:0;padding:0;background:#000}
     #controls {
-      position: fixed;
-      bottom: 100px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #072C4E;
-      padding: 10px 16px;
-      border-radius: 25px;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      z-index: 9999;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      position:fixed;bottom:100px;left:50%;transform:translateX(-50%);
+      background:#072C4E;padding:10px 16px;border-radius:25px;
+      display:flex;align-items:center;gap:12px;z-index:9999;
+      box-shadow:0 0 10px rgba(0,0,0,0.5)
     }
     #controls button {
-      background: #0D3F73;
-      border: none;
-      width: 45px;
-      height: 45px;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: background 0.2s;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background:#0D3F73;border:none;width:45px;height:45px;
+      border-radius:50%;cursor:pointer;transition:background 0.2s;
+      display:flex;justify-content:center;align-items:center
     }
-    #controls button:hover {
-      background: #155A9C;
-    }
-    #controls img {
-      width: 22px;
-      height: 22px;
-      filter: invert(1);
-    }
+    #controls button:hover {background:#155A9C}
+    #controls img {width:22px;height:22px;filter:invert(1)}
     #timeBox {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #072C4E;
-      color: white;
-      padding: 8px 20px;
-      border-radius: 15px;
-      font-size: 22px;
-      font-weight: bold;
-      z-index: 9999;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-      font-family: Arial, sans-serif;
+      position:fixed;bottom:30px;left:50%;transform:translateX(-50%);
+      background:#072C4E;color:#fff;padding:8px 20px;border-radius:15px;
+      font-size:22px;font-weight:bold;z-index:9999;
+      box-shadow:0 0 10px rgba(0,0,0,0.5);font-family:Arial,sans-serif
     }
     #attribution {
-      position: fixed;
-      bottom: 0;
-      right: 0;
-      background: rgba(0,0,0,0.6);
-      color: #ccc;
-      padding: 2px 6px;
-      border-top-left-radius: 5px;
-      font-size: 11px;
-      font-family: Arial, sans-serif;
-      z-index: 9999;
+      position:fixed;bottom:0;right:0;background:rgba(0,0,0,0.6);
+      color:#ccc;padding:2px 6px;border-top-left-radius:5px;
+      font-size:11px;font-family:Arial,sans-serif;z-index:9999
     }
-    #attribution a {
-      color: #66b3ff;
-      text-decoration: none;
-    }
-    #attribution a:hover {
-      text-decoration: underline;
-    }
-    /* ✅ GPU akcelerácia pre plynulosť */
-    .leaflet-tile, .leaflet-overlay-pane {
-      will-change: transform;
-    }
+    #attribution a {color:#66b3ff;text-decoration:none}
+    #attribution a:hover {text-decoration:underline}
+    .leaflet-tile,.leaflet-overlay-pane{will-change:transform}
   </style>
 </head>
 <body>
 <div id="map"></div>
-
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
   <button id="play"><img id="playIcon" src="https://img.icons8.com/ios-filled/50/play.png"></button>
@@ -99,125 +44,48 @@
   <button id="refresh"><img src="https://img.icons8.com/ios-filled/50/synchronize.png"></button>
 </div>
 <div id="timeBox">Načítavam čas...</div>
-
 <div id="attribution">
   Map data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> &amp;
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
-
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  // ✅ Slovensko + 30 km okruh (mapa)
-  const MAP_BOUNDS = [
-    [47.1, 16.0],  // juhozápad
-    [49.6, 22.7]   // severovýchod
-  ];
-
-  const map = L.map('map', {
-    zoomControl: true,
-    attributionControl: false,
-    maxBounds: MAP_BOUNDS,
-    maxBoundsViscosity: 1.0,
-    noWrap: true,
-    minZoom: 7,
-    maxZoom: 11,
-    keepBuffer: 1,           // ✅ nechá buffer pre plynulý prechod (1 dlaždica navyše)
-    preferCanvas: true,      // ✅ plynulejšie vykresľovanie
-    zoomAnimation: true,
-    fadeAnimation: true,
-    markerZoomAnimation: true
+  const MAP_BOUNDS=[[46.9,15.8],[49.8,23.0]];
+  const map=L.map('map',{
+    zoomControl:true,attributionControl:false,maxBounds:MAP_BOUNDS,
+    maxBoundsViscosity:1,noWrap:true,minZoom:6,maxZoom:12,keepBuffer:1,
+    preferCanvas:true,zoomAnimation:true,fadeAnimation:true,markerZoomAnimation:true
   }).fitBounds(MAP_BOUNDS);
-
-  // ✅ Podkladová mapa (Carto Dark)
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-    subdomains: 'abcd',
-    maxZoom: 11,
-    minZoom: 7,
-    noWrap: true,
-    keepBuffer: 1           // ✅ buffer = prirodzený okraj bez "štvorcového orezu"
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{
+    subdomains:'abcd',maxZoom:12,minZoom:6,noWrap:true,keepBuffer:1
   }).addTo(map);
-
-  // ✅ Hranice Slovenska
-  fetch("slovakia_Regions_level_1.geojson")
-    .then(r => r.json())
-    .then(data => {
-      L.geoJSON(data, {
-        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map);
-    });
-
-  let radarFrames = [];
-  let radarLayers = [];
-  let currentIndex = 0;
-  let playInterval = null;
-  const timeBox = document.getElementById("timeBox");
-
-  function formatDate(timestamp) {
-    const date = new Date(timestamp * 1000);
-    const days = ["NE", "PO", "UT", "ST", "ŠT", "PI", "SO"];
-    return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
+  fetch("slovakia_Regions_level_1.geojson").then(r=>r.json()).then(d=>{
+    L.geoJSON(d,{style:{color:"#00bfff",weight:1.5,fillOpacity:0}}).addTo(map);
+  });
+  let radarFrames=[],radarLayers=[],currentIndex=0,playInterval=null;
+  const timeBox=document.getElementById("timeBox");
+  function formatDate(t){const d=new Date(t*1000),days=["NE","PO","UT","ST","ŠT","PI","SO"];
+    return`${days[d.getDay()]} ${String(d.getDate()).padStart(2,'0')}.${String(d.getMonth()+1).padStart(2,'0')}.${d.getFullYear()} o ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`}
+  function fadeToFrame(i){radarLayers.forEach((l,x)=>l.setOpacity(x===i?0.8:0));
+    timeBox.textContent=formatDate(radarFrames[i].time)}
+  function loadRadar(){
+    radarLayers.forEach(l=>map.removeLayer(l));radarLayers=[];
+    fetch("https://api.rainviewer.com/public/weather-maps.json").then(r=>r.json()).then(d=>{
+      radarFrames=d.radar.past.concat(d.radar.nowcast);currentIndex=d.radar.past.length-1;
+      radarFrames.forEach((f,i)=>{
+        const layer=L.tileLayer(`https://tilecache.rainviewer.com/v2/radar/${f.path}/256/{z}/{x}/{y}/4/1_1.png`,
+        {opacity:0,noWrap:true,keepBuffer:1}).addTo(map);radarLayers[i]=layer});
+      fadeToFrame(currentIndex)});
   }
-
-  function fadeToFrame(index) {
-    radarLayers.forEach((layer, i) => {
-      layer.setOpacity(i === index ? 0.8 : 0);
-    });
-    timeBox.textContent = formatDate(radarFrames[index].time);
-  }
-
-  function loadRadar() {
-    radarLayers.forEach(layer => map.removeLayer(layer));
-    radarLayers = [];
-
-    fetch("https://api.rainviewer.com/public/weather-maps.json")
-      .then(r => r.json())
-      .then(data => {
-        radarFrames = data.radar.past.concat(data.radar.nowcast);
-        currentIndex = data.radar.past.length - 1;
-
-        radarFrames.forEach((frame, i) => {
-          const layer = L.tileLayer(
-            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
-            {
-              opacity: 0,
-              noWrap: true,
-              keepBuffer: 1    // ✅ buffer = prirodzené zobrazenie na okrajoch
-            }
-          ).addTo(map);
-          radarLayers[i] = layer;
-        });
-
-        fadeToFrame(currentIndex);
-      });
-  }
-
   loadRadar();
-
-  document.getElementById("back").onclick = () => {
-    currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
-    fadeToFrame(currentIndex);
-  };
-
-  document.getElementById("next").onclick = () => {
-    currentIndex = (currentIndex + 1) % radarFrames.length;
-    fadeToFrame(currentIndex);
-  };
-
-  document.getElementById("play").onclick = () => {
-    if (playInterval) {
-      clearInterval(playInterval);
-      playInterval = null;
-      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/play.png";
-    } else {
-      playInterval = setInterval(() => {
-        currentIndex = (currentIndex + 1) % radarFrames.length;
-        fadeToFrame(currentIndex);
-      }, 500);
-      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
-    }
-  };
-
-  document.getElementById("refresh").onclick = () => loadRadar();
+  document.getElementById("back").onclick=()=>{currentIndex=(currentIndex-1+radarFrames.length)%radarFrames.length;fadeToFrame(currentIndex)}
+  document.getElementById("next").onclick=()=>{currentIndex=(currentIndex+1)%radarFrames.length;fadeToFrame(currentIndex)}
+  document.getElementById("play").onclick=()=>{
+    if(playInterval){clearInterval(playInterval);playInterval=null;
+      document.getElementById("playIcon").src="https://img.icons8.com/ios-filled/50/play.png"}
+    else{playInterval=setInterval(()=>{currentIndex=(currentIndex+1)%radarFrames.length;fadeToFrame(currentIndex)},500);
+      document.getElementById("playIcon").src="https://img.icons8.com/ios-filled/50/pause.png"}}
+  document.getElementById("refresh").onclick=()=>loadRadar();
 </script>
 </body>
 </html>
