--- a/index.html
+++ b/index.html
@@ -2,37 +2,31 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko (plné zrážky)</title>
+  <title>Radar zrážok</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    html, body, #map {height:100%;width:100%;margin:0;padding:0;background:#000}
+    html, body, #map {height:100%;width:100%;margin:0;padding:0}
     #controls {
-      position:fixed;bottom:100px;left:50%;transform:translateX(-50%);
-      background:#072C4E;padding:10px 16px;border-radius:25px;
-      display:flex;align-items:center;gap:12px;z-index:9999;
-      box-shadow:0 0 10px rgba(0,0,0,0.5)
+      position:fixed;bottom:90px;left:50%;transform:translateX(-50%);
+      background:#072C4E;padding:8px 14px;border-radius:20px;
+      display:flex;gap:8px;z-index:9999
     }
     #controls button {
-      background:#0D3F73;border:none;width:45px;height:45px;
-      border-radius:50%;cursor:pointer;transition:background 0.2s;
-      display:flex;justify-content:center;align-items:center
+      background:#0D3F73;border:none;width:40px;height:40px;
+      border-radius:50%;cursor:pointer;display:flex;align-items:center;justify-content:center
     }
-    #controls button:hover {background:#155A9C}
-    #controls img {width:22px;height:22px;filter:invert(1)}
+    #controls img {width:20px;height:20px;filter:invert(1)}
     #timeBox {
-      position:fixed;bottom:30px;left:50%;transform:translateX(-50%);
-      background:#072C4E;color:#fff;padding:8px 20px;border-radius:15px;
-      font-size:22px;font-weight:bold;z-index:9999;
-      box-shadow:0 0 10px rgba(0,0,0,0.5);font-family:Arial,sans-serif
+      position:fixed;bottom:25px;left:50%;transform:translateX(-50%);
+      background:#072C4E;color:#fff;padding:5px 15px;border-radius:12px;
+      font:16px Arial,sans-serif;z-index:9999
     }
     #attribution {
       position:fixed;bottom:0;right:0;background:rgba(0,0,0,0.6);
-      color:#ccc;padding:2px 6px;border-top-left-radius:5px;
-      font-size:11px;font-family:Arial,sans-serif;z-index:9999
+      color:#ccc;padding:2px 5px;font:10px Arial,sans-serif;z-index:9999
     }
     #attribution a {color:#66b3ff;text-decoration:none}
-    #attribution a:hover {text-decoration:underline}
-    .leaflet-tile,.leaflet-overlay-pane{will-change:transform}
+    .city-label {color:#fff;font:11px Arial,sans-serif;text-shadow:1px 1px 1px #000}
   </style>
 </head>
 <body>
@@ -45,47 +39,60 @@
 </div>
 <div id="timeBox">Načítavam čas...</div>
 <div id="attribution">
-  Map data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> &amp;
+  © <a href="https://www.openstreetmap.org/copyright" target="_blank">OSM</a> &amp;
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const MAP_BOUNDS=[[46.9,15.8],[49.8,23.0]];
+  const MAP_BOUNDS=[[46.9,15.8],[49.8,23.0]]
   const map=L.map('map',{
-    zoomControl:true,attributionControl:false,maxBounds:MAP_BOUNDS,
-    maxBoundsViscosity:1,noWrap:true,minZoom:6,maxZoom:12,keepBuffer:2,
-    preferCanvas:true,zoomAnimation:true,fadeAnimation:true,markerZoomAnimation:true
-  }).fitBounds(MAP_BOUNDS);
+    maxBounds:MAP_BOUNDS,maxBoundsViscosity:1,noWrap:true,
+    minZoom:6,maxZoom:12,preferCanvas:true,zoomAnimation:true
+  }).fitBounds(MAP_BOUNDS)
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{
-    subdomains:'abcd',maxZoom:12,minZoom:6,noWrap:false,keepBuffer:2
-  }).addTo(map);
+    subdomains:'abcd',maxZoom:12,minZoom:6,noWrap:false
+  }).addTo(map)
   fetch("slovakia_Regions_level_1.geojson").then(r=>r.json()).then(d=>{
-    L.geoJSON(d,{style:{color:"#00bfff",weight:1.5,fillOpacity:0}}).addTo(map);
-  });
-  let radarFrames=[],radarLayers=[],currentIndex=0,playInterval=null;
-  const timeBox=document.getElementById("timeBox");
-  function formatDate(t){const d=new Date(t*1000),days=["NE","PO","UT","ST","ŠT","PI","SO"];
-    return`${days[d.getDay()]} ${String(d.getDate()).padStart(2,'0')}.${String(d.getMonth()+1).padStart(2,'0')}.${d.getFullYear()} o ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`}
-  function fadeToFrame(i){radarLayers.forEach((l,x)=>l.setOpacity(x===i?0.8:0));
-    timeBox.textContent=formatDate(radarFrames[i].time)}
+    L.geoJSON(d,{style:{color:"#00bfff",weight:1,fillOpacity:0}}).addTo(map)
+  })
+  fetch("https://overpass-api.de/api/interpreter?data=[out:json];area[name='Slovakia']->.a;(node[place~'city|town|village'](area.a););out;")
+    .then(r=>r.json()).then(data=>{
+      data.elements.forEach(e=>{
+        if(e.lat&&e.lon&&e.tags&&e.tags.name){
+          L.circleMarker([e.lat,e.lon],{radius:2,color:"#fff",fillColor:"#fff",fillOpacity:1})
+            .addTo(map)
+            .bindTooltip(e.tags.name,{permanent:true,direction:"right",className:"city-label"})
+        }
+      })
+    })
+  let radarFrames=[],radarLayers=[],currentIndex=0,playInterval=null
+  const timeBox=document.getElementById("timeBox")
+  function formatDate(t){
+    const d=new Date(t*1000),days=["NE","PO","UT","ST","ŠT","PI","SO"]
+    return`${days[d.getDay()]} ${String(d.getDate()).padStart(2,'0')}.${String(d.getMonth()+1).padStart(2,'0')}.${d.getFullYear()} ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`
+  }
+  function fadeToFrame(i){
+    radarLayers.forEach((l,x)=>l.setOpacity(x===i?0.8:0))
+    timeBox.textContent=formatDate(radarFrames[i].time)
+  }
   function loadRadar(){
-    radarLayers.forEach(l=>map.removeLayer(l));radarLayers=[];
+    radarLayers.forEach(l=>map.removeLayer(l));radarLayers=[]
     fetch("https://api.rainviewer.com/public/weather-maps.json").then(r=>r.json()).then(d=>{
-      radarFrames=d.radar.past.concat(d.radar.nowcast);currentIndex=d.radar.past.length-1;
+      radarFrames=d.radar.past.concat(d.radar.nowcast);currentIndex=d.radar.past.length-1
       radarFrames.forEach((f,i)=>{
         const layer=L.tileLayer(`https://tilecache.rainviewer.com/v2/radar/${f.path}/256/{z}/{x}/{y}/4/1_1.png`,
-        {opacity:0,noWrap:false,keepBuffer:2}).addTo(map);radarLayers[i]=layer});
-      fadeToFrame(currentIndex)});
+        {opacity:0,noWrap:false}).addTo(map);radarLayers[i]=layer})
+      fadeToFrame(currentIndex)})
   }
-  loadRadar();
-  document.getElementById("back").onclick=()=>{currentIndex=(currentIndex-1+radarFrames.length)%radarFrames.length;fadeToFrame(currentIndex)}
-  document.getElementById("next").onclick=()=>{currentIndex=(currentIndex+1)%radarFrames.length;fadeToFrame(currentIndex)}
-  document.getElementById("play").onclick=()=>{
-    if(playInterval){clearInterval(playInterval);playInterval=null;
-      document.getElementById("playIcon").src="https://img.icons8.com/ios-filled/50/play.png"}
+  loadRadar()
+  back.onclick=()=>{currentIndex=(currentIndex-1+radarFrames.length)%radarFrames.length;fadeToFrame(currentIndex)}
+  next.onclick=()=>{currentIndex=(currentIndex+1)%radarFrames.length;fadeToFrame(currentIndex)}
+  play.onclick=()=>{
+    if(playInterval){clearInterval(playInterval);playInterval=null;playIcon.src="https://img.icons8.com/ios-filled/50/play.png"}
     else{playInterval=setInterval(()=>{currentIndex=(currentIndex+1)%radarFrames.length;fadeToFrame(currentIndex)},500);
-      document.getElementById("playIcon").src="https://img.icons8.com/ios-filled/50/pause.png"}}
-  document.getElementById("refresh").onclick=()=>loadRadar();
+      playIcon.src="https://img.icons8.com/ios-filled/50/pause.png"}
+  }
+  refresh.onclick=()=>loadRadar()
 </script>
 </body>
 </html>
