--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Radar zrážok</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    html, body, #map {height:100%;width:100%;margin:0;padding:0}
+    html, body, #map {height:100%;width:100%;margin:0;padding:0;background:#000}
     #controls {
       position:fixed;bottom:90px;left:50%;transform:translateX(-50%);
       background:#072C4E;padding:8px 14px;border-radius:20px;
@@ -27,6 +27,8 @@
     }
     #attribution a {color:#66b3ff;text-decoration:none}
     .city-label {color:#fff;font:11px Arial,sans-serif;text-shadow:1px 1px 1px #000}
+    .leaflet-container {background:#000}
+    .leaflet-tile {background:#000}
   </style>
 </head>
 <body>
@@ -46,11 +48,20 @@
 <script>
   const MAP_BOUNDS=[[46.9,15.8],[49.8,23.0]]
   const map=L.map('map',{
-    maxBounds:MAP_BOUNDS,maxBoundsViscosity:1,noWrap:true,
-    minZoom:6,maxZoom:12,preferCanvas:true,zoomAnimation:true
+    maxBounds:MAP_BOUNDS,
+    maxBoundsViscosity:1,
+    noWrap:true,
+    minZoom:6,
+    maxZoom:12,
+    preferCanvas:true,
+    zoomAnimation:true
   }).fitBounds(MAP_BOUNDS)
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{
-    subdomains:'abcd',maxZoom:12,minZoom:6,noWrap:false
+    subdomains:'abcd',
+    maxZoom:12,
+    minZoom:6,
+    noWrap:true,
+    detectRetina:true
   }).addTo(map)
   fetch("slovakia_Regions_level_1.geojson").then(r=>r.json()).then(d=>{
     L.geoJSON(d,{style:{color:"#00bfff",weight:1,fillOpacity:0}}).addTo(map)
@@ -81,7 +92,7 @@
       radarFrames=d.radar.past.concat(d.radar.nowcast);currentIndex=d.radar.past.length-1
       radarFrames.forEach((f,i)=>{
         const layer=L.tileLayer(`https://tilecache.rainviewer.com/v2/radar/${f.path}/256/{z}/{x}/{y}/4/1_1.png`,
-        {opacity:0,noWrap:false}).addTo(map);radarLayers[i]=layer})
+        {opacity:0,noWrap:true}).addTo(map);radarLayers[i]=layer})
       fadeToFrame(currentIndex)})
   }
   loadRadar()
