--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MapLibre – Oficiálna mapa</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MapLibre GL JS – OSM Light</title>
   <!-- MapLibre GL CSS -->
   <link
     href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css"
@@ -20,13 +20,38 @@
   <!-- MapLibre GL JS -->
   <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
   <script>
+    // Inline style pre OSM raster dlaždice “Light” od OSM Contributors
+    const osmLightStyle = {
+      version: 8,
+      sources: {
+        'osm-tiles': {
+          type: 'raster',
+          tiles: [
+            'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'
+          ],
+          tileSize: 256,
+          attribution: '© OpenStreetMap contributors'
+        }
+      },
+      layers: [
+        {
+          id: 'osm-tiles',
+          type: 'raster',
+          source: 'osm-tiles',
+          minzoom: 0,
+          maxzoom: 19
+        }
+      ]
+    };
+
     const map = new maplibregl.Map({
       container: 'map',
-      style: 'https://demotiles.maplibre.org/style.json', // svetlý štýl od MapLibre
+      style: osmLightStyle,
       center: [17.1077, 48.1486], // napr. Bratislava
       zoom: 12
     });
 
+    // Ovládacie prvky
     map.addControl(new maplibregl.NavigationControl(), 'top-right');
     map.addControl(new maplibregl.ScaleControl({ unit: 'metric' }));
   </script>
